build: 각 모듈에서 필요하지 않은 라이브러리 의존성 제거