@@ -1,30 +1,38 @@
 package kitchenpos.core.menu.application.dto;
 
-import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.List;
 import java.util.stream.Collectors;
 import kitchenpos.core.menu.domain.MenuProduct;
 
-public class MenuProductResponse {
-    @JsonProperty
+public class MenuProductRecord {
     private Long seq;
-    @JsonProperty
     private Long productId;
-    @JsonProperty
     private long quantity;
 
-    public MenuProductResponse(final Long seq, final Long productId, final long quantity) {
+    public MenuProductRecord(final Long seq, final Long productId, final long quantity) {
         this.seq = seq;
         this.productId = productId;
         this.quantity = quantity;
     }
 
-    public static List<MenuProductResponse> from(final List<MenuProduct> menuProducts) {
+    public static List<MenuProductRecord> from(final List<MenuProduct> menuProducts) {
         return menuProducts
-                .stream().map(menuProduct -> new MenuProductResponse(
+                .stream().map(menuProduct -> new MenuProductRecord(
                         menuProduct.getSeq(),
                         menuProduct.getProductId(),
                         menuProduct.getQuantity()
-                )).collect(Collectors.toList());
+                )).toList();
+    }
+
+    public Long getSeq() {
+        return seq;
+    }
+
+    public Long getProductId() {
+        return productId;
+    }
+
+    public long getQuantity() {
+        return quantity;
     }
 }
